@@ -1,5 +1,10 @@
 2017-11-26  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* src/openpgp.c (cmd_change_password): Bug fix for admin-less
+	mode.
+
+2017-11-26  NIIBE Yutaka  <gniibe@fsij.org>
+
 	* VERSION: 1.2.7.
 
 2017-11-24  NIIBE Yutaka  <gniibe@fsij.org>
